--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,8 @@
-@tailwind base;
+@layer tailwind {
+  @tailwind base;
+}
 @tailwind components;
 @tailwind utilities;
-
 @layer base {
   :root {
     --background: 0 0% 100%;
